ScanManager: better dialog on collection scanner errors

We now link to http://userbase.kde.org/Amarok/Manual/Various/TroubleshootingAndCommonProblems#Duplicate_Tracks
and format the message much more nicely.

BUG: 308762
FIXED-IN: 2.7